tests/cycle/cycle.exp
Error -------------------------------------------------------------------------------------------------------- B.js:5:18

Cannot resolve name `B`. [cannot-resolve-name]

   5| module.exports = B;
                       ^



Found 1 error
